build/y.output
Terminals unused in grammar

    CONTINUE


State 11 conflicts: 1 shift/reduce
State 17 conflicts: 1 shift/reduce
State 30 conflicts: 1 shift/reduce
State 49 conflicts: 2 shift/reduce
State 119 conflicts: 15 reduce/reduce
State 125 conflicts: 2 reduce/reduce
State 132 conflicts: 1 shift/reduce, 10 reduce/reduce
State 137 conflicts: 1 shift/reduce
State 153 conflicts: 2 shift/reduce
State 186 conflicts: 10 reduce/reduce
State 217 conflicts: 8 shift/reduce


Grammar

    0 $accept: Program $end

    1 $@1: ε

    2 Program: $@1 GlobalStmtList
    3        | ε

    4 GlobalStmtList: GlobalStmtList GlobalStmt
    5               | GlobalStmt

    6 GlobalStmt: DefineVariableStmt
    7           | FunctionDefStmt
    8           | CoutStmt
    9           | ReturnStmt
   10           | AssignStmt
   11           | SelectionStmt
   12           | IterationStmt
   13           | JumpStmt
   14           | FunctionCallStmt

   15 FunctionCallStmt: FunctionCall ';'

   16 JumpStmt: BREAK ';'

   17 $@2: ε

   18 $@3: ε

   19 IterationStmt: WHILE $@2 '(' Expression ')' $@3 CompoundStmt

   20 $@4: ε

   21 $@5: ε

   22 IterationStmt: FOR $@4 '(' ForCondition ')' $@5 CompoundStmt

   23 $@6: ε

   24 $@7: ε

   25 ForCondition: ExpressionStmt $@6 ExpressionStmt $@7 ExpressionStmt
   26             | VARIABLE_T IDENT ':' IDENT

   27 ExpressionStmt: Expression ';'
   28               | DefineVariableStmt
   29               | AssignBody
   30               | Expression
   31               | ';'

   32 CompoundStmt: '{' GlobalStmtList '}'
   33             | GlobalStmtList

   34 $@8: ε

   35 SelectionStmt: IF '(' Expression ')' $@8 Selection

   36 $@9: ε

   37 SelectionStmt: SelectionStmt ELSE $@9 Selection

   38 Selection: GlobalStmt

   39 $@10: ε

   40 $@11: ε

   41 Selection: '{' $@10 GlobalStmtList $@11 '}'

   42 AssignStmt: AssignBody ';'

   43 $@12: ε

   44 AssignBody: IDENT $@12 Assign

   45 @13: ε

   46 AssignBody: IDENT '[' @13 AssignList

   47 $@14: ε

   48 AssignList: Expression ']' $@14 Assign

   49 $@15: ε

   50 AssignList: Expression ']' '[' Expression ']' $@15 Assign

   51 Assign: Assignable
   52       | VAL_ASSIGN Assign
   53       | ADD_ASSIGN Assign
   54       | SUB_ASSIGN Assign
   55       | MUL_ASSIGN Assign
   56       | DIV_ASSIGN Assign
   57       | REM_ASSIGN Assign
   58       | BAN_ASSIGN Assign
   59       | BOR_ASSIGN Assign
   60       | BXO_ASSIGN Assign
   61       | SHR_ASSIGN Assign
   62       | SHL_ASSIGN Assign

   63 Assignable: STR_LIT
   64           | Expression

   65 DefineVariableStmt: VARIABLE_T DeclaratorList ';'

   66 DeclaratorList: Declarator
   67               | DeclaratorList ',' Declarator

   68 Declarator: IDENT
   69           | IDENT VAL_ASSIGN Assignable
   70           | IDENT '[' Expression ']'
   71           | IDENT '[' Expression ']' '[' Expression ']'

   72 $@16: ε

   73 Declarator: IDENT '[' Expression ']' $@16 VAL_ASSIGN '{' ArrayEles '}'

   74 @17: ε

   75 ArrayEles: @17 Assignable

   76 @18: ε

   77 ArrayEles: ArrayEles ',' @18 Assignable
   78          | ε

   79 ReturnStmt: RETURN Expression ';'
   80           | RETURN ';'

   81 $@19: ε

   82 CoutStmt: COUT $@19 SHL PrintableList ';'

   83 PrintableList: Printable
   84              | PrintableList SHL Printable

   85 Printable: STR_LIT
   86          | ENDL
   87          | Expression

   88 Expression: Or
   89           | STR_LIT

   90 Or: And
   91   | Or LOR And

   92 And: BitwiseOr
   93    | And LAN BitwiseOr

   94 BitwiseOr: BitwiseXor
   95          | BitwiseOr BOR BitwiseXor

   96 BitwiseXor: BitwiseAnd
   97           | BitwiseXor BXO BitwiseAnd

   98 BitwiseAnd: Equality
   99           | BitwiseAnd BAN Equality

  100 Equality: Relational
  101         | Equality EQL Relational
  102         | Equality NEQ Relational

  103 Relational: Shift
  104           | Relational LES Shift
  105           | Relational GTR Shift
  106           | Relational LEQ Shift
  107           | Relational GEQ Shift

  108 Shift: Additive
  109      | Shift SHR Additive

  110 Additive: Multiplicative
  111         | Additive ADD Multiplicative
  112         | Additive SUB Multiplicative

  113 Multiplicative: TypeCast
  114               | Multiplicative MUL TypeCast
  115               | Multiplicative DIV TypeCast
  116               | Multiplicative REM TypeCast

  117 TypeCast: Unary
  118         | '(' VARIABLE_T ')' Unary

  119 Unary: BNT Unary
  120      | ADD Unary
  121      | SUB Unary
  122      | NOT Unary
  123      | Post

  124 Post: Primary
  125     | Primary INC_ASSIGN
  126     | Primary DEC_ASSIGN

  127 Primary: INT_LIT
  128        | FLOAT_LIT
  129        | '(' Expression ')'
  130        | BOOL_LIT
  131        | IDENT
  132        | FunctionCall

  133 @20: ε

  134 Primary: IDENT '[' @20 List

  135 List: Expression ']'
  136     | Expression ']' '[' Expression ']'

  137 FunctionCall: IDENT '(' ArgumentList ')'

  138 ArgumentList: ArgumentListNonEmpty

  139 ArgumentListNonEmpty: Expression
  140                     | ArgumentListNonEmpty ',' Expression

  141 $@21: ε

  142 $@22: ε

  143 $@23: ε

  144 FunctionDefStmt: VARIABLE_T IDENT $@21 '(' $@22 FunctionParameterStmtList ')' $@23 '{' GlobalStmtList '}'

  145 FunctionParameterStmtList: FunctionParameterStmtList ',' FunctionParameterStmt
  146                          | FunctionParameterStmt
  147                          | ε

  148 FunctionParameterStmt: VARIABLE_T IDENT

  149 $@24: ε

  150 FunctionParameterStmt: VARIABLE_T IDENT $@24 '[' ']'


Terminals, with rules where they appear

    $end (0) 0
    '(' <object_val> (40) 19 22 35 118 129 137 144
    ')' (41) 19 22 35 118 129 137 144
    ',' (44) 67 77 140 145
    ':' (58) 26
    ';' (59) 15 16 27 31 42 65 79 80 82
    '[' (91) 46 50 70 71 73 134 136 150
    ']' (93) 48 50 70 71 73 135 136 150
    '{' (123) 32 41 73 144
    '}' (125) 32 41 73 144
    error (256)
    COUT (258) 82
    SHR (259) 109
    SHL (260) 82 84
    BAN (261) 99
    BOR (262) 95
    BXO (263) 97
    MUL (264) 114
    DIV (265) 115
    REM (266) 116
    GTR (267) 105
    LES (268) 104
    GEQ (269) 107
    LEQ (270) 106
    EQL (271) 101
    NEQ (272) 102
    LAN (273) 93
    LOR (274) 91
    VAL_ASSIGN (275) 52 69 73
    ADD_ASSIGN (276) 53
    SUB_ASSIGN (277) 54
    MUL_ASSIGN (278) 55
    DIV_ASSIGN (279) 56
    REM_ASSIGN (280) 57
    BAN_ASSIGN (281) 58
    BOR_ASSIGN (282) 59
    BXO_ASSIGN (283) 60
    SHR_ASSIGN (284) 61
    SHL_ASSIGN (285) 62
    INC_ASSIGN (286) 125
    DEC_ASSIGN (287) 126
    IF (288) 35
    ELSE (289) 37
    FOR (290) 22
    WHILE (291) 19
    RETURN (292) 79 80
    BREAK (293) 16
    CONTINUE (294)
    ENDL (295) 86
    VARIABLE_T <var_type> (296) 26 65 118 144 148 150
    IDENT <s_val> (297) 26 44 46 68 69 70 71 73 131 134 137 144 148 150
    BOOL_LIT <b_var> (298) 130
    INT_LIT <i_var> (299) 127
    FLOAT_LIT <f_var> (300) 128
    STR_LIT <s_var> (301) 63 85 89
    SUB <object_val> (302) 112 121
    NOT <object_val> (303) 122
    BNT <object_val> (304) 119
    ADD <object_val> (305) 111 120


Nonterminals, with rules where they appear

    $accept (60)
        on left: 0
    Program (61)
        on left: 2 3
        on right: 0
    $@1 (62)
        on left: 1
        on right: 2
    GlobalStmtList (63)
        on left: 4 5
        on right: 2 4 32 33 41 144
    GlobalStmt (64)
        on left: 6 7 8 9 10 11 12 13 14
        on right: 4 5 38
    FunctionCallStmt (65)
        on left: 15
        on right: 14
    JumpStmt (66)
        on left: 16
        on right: 13
    IterationStmt (67)
        on left: 19 22
        on right: 12
    $@2 (68)
        on left: 17
        on right: 19
    $@3 (69)
        on left: 18
        on right: 19
    $@4 (70)
        on left: 20
        on right: 22
    $@5 (71)
        on left: 21
        on right: 22
    ForCondition (72)
        on left: 25 26
        on right: 22
    $@6 (73)
        on left: 23
        on right: 25
    $@7 (74)
        on left: 24
        on right: 25
    ExpressionStmt (75)
        on left: 27 28 29 30 31
        on right: 25
    CompoundStmt (76)
        on left: 32 33
        on right: 19 22
    SelectionStmt (77)
        on left: 35 37
        on right: 11 37
    $@8 (78)
        on left: 34
        on right: 35
    $@9 (79)
        on left: 36
        on right: 37
    Selection (80)
        on left: 38 41
        on right: 35 37
    $@10 (81)
        on left: 39
        on right: 41
    $@11 (82)
        on left: 40
        on right: 41
    AssignStmt (83)
        on left: 42
        on right: 10
    AssignBody <object_val> (84)
        on left: 44 46
        on right: 29 42
    $@12 (85)
        on left: 43
        on right: 44
    @13 (86)
        on left: 45
        on right: 46
    AssignList <object_val> (87)
        on left: 48 50
        on right: 46
    $@14 (88)
        on left: 47
        on right: 48
    $@15 (89)
        on left: 49
        on right: 50
    Assign (90)
        on left: 51 52 53 54 55 56 57 58 59 60 61 62
        on right: 44 48 50 52 53 54 55 56 57 58 59 60 61 62
    Assignable <object_val> (91)
        on left: 63 64
        on right: 51 69 75 77
    DefineVariableStmt (92)
        on left: 65
        on right: 6 28
    DeclaratorList (93)
        on left: 66 67
        on right: 65 67
    Declarator (94)
        on left: 68 69 70 71 73
        on right: 66 67
    $@16 (95)
        on left: 72
        on right: 73
    ArrayEles (96)
        on left: 75 77 78
        on right: 73 77
    @17 (97)
        on left: 74
        on right: 75
    @18 (98)
        on left: 76
        on right: 77
    ReturnStmt (99)
        on left: 79 80
        on right: 9
    CoutStmt (100)
        on left: 82
        on right: 8
    $@19 (101)
        on left: 81
        on right: 82
    PrintableList <object_val> (102)
        on left: 83 84
        on right: 82 84
    Printable <object_val> (103)
        on left: 85 86 87
        on right: 83 84
    Expression <object_val> (104)
        on left: 88 89
        on right: 19 27 30 35 48 50 64 70 71 73 79 87 129 135 136 139 140
    Or <object_val> (105)
        on left: 90 91
        on right: 88 91
    And <object_val> (106)
        on left: 92 93
        on right: 90 91 93
    BitwiseOr <object_val> (107)
        on left: 94 95
        on right: 92 93 95
    BitwiseXor <object_val> (108)
        on left: 96 97
        on right: 94 95 97
    BitwiseAnd <object_val> (109)
        on left: 98 99
        on right: 96 97 99
    Equality <object_val> (110)
        on left: 100 101 102
        on right: 98 99 101 102
    Relational <object_val> (111)
        on left: 103 104 105 106 107
        on right: 100 101 102 104 105 106 107
    Shift <object_val> (112)
        on left: 108 109
        on right: 103 104 105 106 107 109
    Additive <object_val> (113)
        on left: 110 111 112
        on right: 108 109 111 112
    Multiplicative <object_val> (114)
        on left: 113 114 115 116
        on right: 110 111 112 114 115 116
    TypeCast <object_val> (115)
        on left: 117 118
        on right: 113 114 115 116
    Unary <object_val> (116)
        on left: 119 120 121 122 123
        on right: 117 118 119 120 121 122
    Post <object_val> (117)
        on left: 124 125 126
        on right: 123
    Primary <object_val> (118)
        on left: 127 128 129 130 131 132 134
        on right: 124 125 126
    @20 (119)
        on left: 133
        on right: 134
    List <object_val> (120)
        on left: 135 136
        on right: 134
    FunctionCall <object_val> (121)
        on left: 137
        on right: 15 132
    ArgumentList <object_val> (122)
        on left: 138
        on right: 137
    ArgumentListNonEmpty <object_val> (123)
        on left: 139 140
        on right: 138 140
    FunctionDefStmt (124)
        on left: 144
        on right: 7
    $@21 (125)
        on left: 141
        on right: 144
    $@22 (126)
        on left: 142
        on right: 144
    $@23 (127)
        on left: 143
        on right: 144
    FunctionParameterStmtList (128)
        on left: 145 146 147
        on right: 144 145
    FunctionParameterStmt (129)
        on left: 148 150
        on right: 145 146
    $@24 (130)
        on left: 149
        on right: 150


State 0

    0 $accept: • Program $end

    $end      reduce using rule 3 (Program)
    $default  reduce using rule 1 ($@1)

    Program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: Program • $end

    $end  shift, and go to state 3


State 2

    2 Program: $@1 • GlobalStmtList

    COUT        shift, and go to state 4
    IF          shift, and go to state 5
    FOR         shift, and go to state 6
    WHILE       shift, and go to state 7
    RETURN      shift, and go to state 8
    BREAK       shift, and go to state 9
    VARIABLE_T  shift, and go to state 10
    IDENT       shift, and go to state 11

    GlobalStmtList      go to state 12
    GlobalStmt          go to state 13
    FunctionCallStmt    go to state 14
    JumpStmt            go to state 15
    IterationStmt       go to state 16
    SelectionStmt       go to state 17
    AssignStmt          go to state 18
    AssignBody          go to state 19
    DefineVariableStmt  go to state 20
    ReturnStmt          go to state 21
    CoutStmt            go to state 22
    FunctionCall        go to state 23
    FunctionDefStmt     go to state 24


State 3

    0 $accept: Program $end •

    $default  accept


State 4

   82 CoutStmt: COUT • $@19 SHL PrintableList ';'

    $default  reduce using rule 81 ($@19)

    $@19  go to state 25


State 5

   35 SelectionStmt: IF • '(' Expression ')' $@8 Selection

    '('  shift, and go to state 26


State 6

   22 IterationStmt: FOR • $@4 '(' ForCondition ')' $@5 CompoundStmt

    $default  reduce using rule 20 ($@4)

    $@4  go to state 27


State 7

   19 IterationStmt: WHILE • $@2 '(' Expression ')' $@3 CompoundStmt

    $default  reduce using rule 17 ($@2)

    $@2  go to state 28


State 8

   79 ReturnStmt: RETURN • Expression ';'
   80           | RETURN • ';'

    ';'        shift, and go to state 29
    IDENT      shift, and go to state 30
    BOOL_LIT   shift, and go to state 31
    INT_LIT    shift, and go to state 32
    FLOAT_LIT  shift, and go to state 33
    STR_LIT    shift, and go to state 34
    '('        shift, and go to state 35
    SUB        shift, and go to state 36
    NOT        shift, and go to state 37
    BNT        shift, and go to state 38
    ADD        shift, and go to state 39

    Expression      go to state 40
    Or              go to state 41
    And             go to state 42
    BitwiseOr       go to state 43
    BitwiseXor      go to state 44
    BitwiseAnd      go to state 45
    Equality        go to state 46
    Relational      go to state 47
    Shift           go to state 48
    Additive        go to state 49
    Multiplicative  go to state 50
    TypeCast        go to state 51
    Unary           go to state 52
    Post            go to state 53
    Primary         go to state 54
    FunctionCall    go to state 55


State 9

   16 JumpStmt: BREAK • ';'

    ';'  shift, and go to state 56


State 10

   65 DefineVariableStmt: VARIABLE_T • DeclaratorList ';'
  144 FunctionDefStmt: VARIABLE_T • IDENT $@21 '(' $@22 FunctionParameterStmtList ')' $@23 '{' GlobalStmtList '}'

    IDENT  shift, and go to state 57

    DeclaratorList  go to state 58
    Declarator      go to state 59


State 11

   44 AssignBody: IDENT • $@12 Assign
   46           | IDENT • '[' @13 AssignList
  137 FunctionCall: IDENT • '(' ArgumentList ')'

    '('  shift, and go to state 60
    '['  shift, and go to state 61

    '('       [reduce using rule 43 ($@12)]
    $default  reduce using rule 43 ($@12)

    $@12  go to state 62


State 12

    2 Program: $@1 GlobalStmtList •
    4 GlobalStmtList: GlobalStmtList • GlobalStmt

    COUT        shift, and go to state 4
    IF          shift, and go to state 5
    FOR         shift, and go to state 6
    WHILE       shift, and go to state 7
    RETURN      shift, and go to state 8
    BREAK       shift, and go to state 9
    VARIABLE_T  shift, and go to state 10
    IDENT       shift, and go to state 11

    $default  reduce using rule 2 (Program)
